--- a/mystyle.css
+++ b/mystyle.css
@@ -3,7 +3,7 @@ color: rgb(247, 0, 255);
 }  
 
 body {
-    background-color: rgb(0, 0, 0);
+    background-image: url("Backround.jpg");
     color: rgb(255, 255, 255);
 }
 
